# apps/otoge-bookmark-api/src/songs/entities/song.entity.ts
@@ -1,3 +1,4 @@
+import { GameEntity } from '@/games/entities/game.entity';
 import { ApiProperty } from '@nestjs/swagger';
 import { Song } from '@prisma/client';
 import { Exclude } from 'class-transformer';
@@ -9,7 +10,7 @@ export class SongEntity implements Song {
   @ApiProperty()
   title: string;
 
-  @ApiProperty()
+  @Exclude()
   gameId: string;
 
   @Exclude()
@@ -17,6 +18,9 @@ export class SongEntity implements Song {
 
   @Exclude()
   updatedAt: Date;
+
+  @ApiProperty()
+  game: GameEntity;
 
   constructor(partial: Partial<SongEntity>) {
     Object.assign(this, partial);
